--- a/.github/workflows/l10n_extract.yaml
+++ b/.github/workflows/l10n_extract.yaml
@@ -70,7 +70,7 @@ jobs:
             git push -f origin "merge-train-$TRAIN_NUMBER-strings"
 
             # Create pull request, use the last commit message as title
-            gh pr create --fill
+            gh pr create --fill --head $(git branch --show-current)
           else
             echo "No changes found."
           fi
